<resources>
    <string name="app_name">MediCare Plus</string>

    <!--labels-->
    <string name="label_enter_phone_number">Enter Phone Number</string>
    <string name="label_phone_number">Phone Number <font fgcolor="#fc5050">*</font></string>
    <string name="label_enter_email_address">Email Address</string>
    <string name="label_login">Login</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_first_name">First name <font fgcolor="#fc5050">*</font></string>
    <string name="label_last_name">Last name <font fgcolor="#fc5050">*</font></string>
    <string name="label_enter_pin">Enter OTP</string>
    <string name="label_submit">Submit</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_resend">Re-send</string>
    <string name="label_hint">hint</string>
    <string name="label_feeds">Feeds</string>
    <string name="label_no_articles_found">No articles found</string>

    <!--desc-->
    <string name="desc_enter_the_otp_you_received_on_your_registered_number_to_proceed">Enter the otp you received on your registered phone number to proceed.</string>
    <string name="desc_otp_success">OTP verified successfully</string>
    <string name="desc_provide_permissions">Please provide permissions to download</string>
    <string name="desc_logout">Are you sure, you want to logout?</string>

    <!--error-->
    <string name="error_unexpected">Unexpected error occurred! please again try later.</string>

    <!--misc-->
    <string name="otp_hint">"OTP is 123456"</string>
    <string name="label_by">By</string>
    <string name="label_source_separator">|</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_no_images_found">No Images found</string>
</resources>