<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_header"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:text="@string/label_enter_pin"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.8"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_desc"
                style="@style/defaultTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:text="@string/desc_enter_the_otp_you_received_on_your_registered_number_to_proceed"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_otp_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.8"
                />

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/tv_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:textColor="#000"
                app:bar_enabled="false"
                app:bar_height="@dimen/_2sdp"
                app:height="@dimen/_32sdp"
                app:hide_otp="true"
                app:hide_otp_drawable="@drawable/ic_asterisk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_otp_desc"
                app:layout_constraintBottom_toTopOf="@+id/tv_otp_submit"
                app:length="6"
                app:otp_box_background="@drawable/inactive_otp"
                app:otp_box_background_active="@drawable/active_otp"
                app:otp_box_background_inactive="@drawable/inactive_otp"
                app:otp_text_size="@dimen/_20sdp"
                app:width="@dimen/_32sdp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_hint"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/label_hint"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:alpha="0.2"
                app:layout_constraintBottom_toBottomOf="@+id/tv_otp_submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_otp_submit"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_cancel"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/label_cancel"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_otp_submit"
                app:layout_constraintEnd_toStartOf="@+id/tv_otp_submit"
                app:layout_constraintTop_toTopOf="@+id/tv_otp_submit"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_submit"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/label_submit"
                android:textSize="@dimen/_9sdp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>