<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_login"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_margin="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_sign_up"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/label_sign_up"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toTopOf="@+id/tv_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login"
                style="@style/defaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_login"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/ti_phone_field"
                app:layout_constraintStart_toStartOf="@+id/ti_phone_field"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_phone_field"
                style="@style/textInputStyle"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_phone"
                    style="@style/editTextStyle"
                    android:hint="@string/label_enter_phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/buttonStyle"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/label_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ti_phone_field"
                app:layout_constraintStart_toStartOf="@+id/ti_phone_field"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>